// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/GetLinkModal should have called onHide when close button is clicked 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="getLinkModalLabel"
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
            id="getLinkModalLabel"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h2
              class="modal-title"
            >
              title
            </h2>
          </div>
          <div
            class="modal-body"
          >
            <textarea
              class="form-control no-resize min-height"
              dir="auto"
              id="linkModalTextArea"
              readonly=""
            >
              https://mattermost.com
            </textarea>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-tertiary"
              id="linkModalCloseButton"
              type="button"
            >
              Close
            </button>
            <button
              class="btn btn-primary btn-success pull-left"
              data-copy-btn="true"
              id="linkModalCopyLink"
              type="button"
            >
              <i
                class="icon icon-check"
              />
              Copied
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/GetLinkModal should have called onHide when close button is clicked 2`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="getLinkModalLabel"
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
            id="getLinkModalLabel"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h2
              class="modal-title"
            >
              title
            </h2>
          </div>
          <div
            class="modal-body"
          >
            <textarea
              class="form-control no-resize min-height"
              dir="auto"
              id="linkModalTextArea"
              readonly=""
            >
              https://mattermost.com
            </textarea>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-tertiary"
              id="linkModalCloseButton"
              type="button"
            >
              Close
            </button>
            <button
              class="btn btn-primary pull-left"
              data-copy-btn="true"
              id="linkModalCopyLink"
              type="button"
            >
              <i
                class="icon icon-link-variant"
              />
              Copy Link
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/GetLinkModal should match snapshot when all props is set 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="getLinkModalLabel"
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
            id="getLinkModalLabel"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h2
              class="modal-title"
            >
              title
            </h2>
          </div>
          <div
            class="modal-body"
          >
            <p>
              help text
              <br />
              <br />
            </p>
            <textarea
              class="form-control no-resize min-height"
              dir="auto"
              id="linkModalTextArea"
              readonly=""
            >
              https://mattermost.com
            </textarea>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-tertiary"
              id="linkModalCloseButton"
              type="button"
            >
              Close
            </button>
            <button
              class="btn btn-primary pull-left"
              data-copy-btn="true"
              id="linkModalCopyLink"
              type="button"
            >
              <i
                class="icon icon-link-variant"
              />
              Copy Link
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/GetLinkModal should match snapshot when helpText is not set 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="getLinkModalLabel"
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
            id="getLinkModalLabel"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h2
              class="modal-title"
            >
              title
            </h2>
          </div>
          <div
            class="modal-body"
          >
            <textarea
              class="form-control no-resize min-height"
              dir="auto"
              id="linkModalTextArea"
              readonly=""
            >
              https://mattermost.com
            </textarea>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-tertiary"
              id="linkModalCloseButton"
              type="button"
            >
              Close
            </button>
            <button
              class="btn btn-primary pull-left"
              data-copy-btn="true"
              id="linkModalCopyLink"
              type="button"
            >
              <i
                class="icon icon-link-variant"
              />
              Copy Link
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
